# toolport

./: .coderabbit.yaml  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.source  README.md  SECURITY.md  docker-compose.example.yml  eslint.config.mjs  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  ci.yml  docker-publish.yml  release.yml
benchmark/: README.md  bench-sweep.mjs  bench.js  latency.mjs  retrieval.mjs  token-cost.mjs
data/: registry.json.example
docs/: RELEASING.md  ROADMAP.md  SIGNING.md  demo.ass  demo.srt  grouped-discovery.md  headless.md  macos-keychain-test-runbook.md  openwebui.md  windows-msix-virtualization.md
docs/design/: hitl-approval-queue.md
docs/release-notes/: v1.6.0.md  v1.6.1.md  v1.6.2.md
docs/screenshots/: README.md
packaging/homebrew/: toolport.rb
scripts/: install.sh  macos-package-ci.sh  macos-sign-local.sh  prepare-sidecar.mjs  smoke-headless.ps1  test-rust-windows.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Gateway.entitlements  nsis-hooks.nsh  tauri.bundle.conf.json  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: approval.rs  approval_broker.rs  audit.rs  catalog.rs  clients.rs  codemode.rs  desktop.rs  downstream.rs  gateway_publish.rs  inspect.rs  instructions.rs  integrity.rs  lib.rs  main.rs  oauth.rs  registry.rs  remote.rs  router.rs  savings.rs  searchtrace.rs  secrets.rs  semantic.rs  shaping.rs  stacks.rs  teams.rs  usage_report.rs  vendors.rs
src-tauri/tests/: circuit_breaker.rs  list_changed.rs  root_cwd.rs  security_doc.rs
src/components/: ActivityView.test.tsx  ActivityView.tsx  AppSidebar.tsx  Callout.tsx  CatalogView.tsx  ClientDetail.test.tsx  ClientDetail.tsx  ClientLogo.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ImportReviewDialog.test.tsx  ImportReviewDialog.tsx  Onboarding.tsx  Onboarding.verify.test.tsx  PendingApprovals.tsx  PlaygroundView.tsx  ProfileBar.test.tsx  ProfileBar.tsx  QuarantineAlert.test.tsx  QuarantineAlert.tsx  RegistryServerCard.tsx  RegistryServerRow.tsx  SecretsDialog.tsx  ServerDialog.test.tsx  ServerDialog.tsx  SettingsView.tsx  ShareDialog.tsx  TeamsView.test.tsx  TeamsView.tsx  TransportPill.tsx
src/components/ui/: badge.tsx  dialog.tsx  empty-state.tsx  section-header.tsx  sonner.tsx  switch.tsx  tooltip.tsx
src/lib/: api.ts  args.test.ts  args.ts  clientConnect.test.ts  clientConnect.ts  errors.test.ts  errors.ts  launcher.test.ts  launcher.ts  openUrl.test.ts  openUrl.ts  teamUrl.test.ts  teamUrl.ts  theme.tsx  toast.ts  types.test.ts  types.ts  updater.ts  utils.test.ts  utils.ts
src/test/: setup.ts
