[package]
name = "conduit"
version = "1.8.0"
description = "Local MCP gateway: manage all your MCP servers in one place, set up once and shared by every AI client, with ~90% fewer tokens per request"
authors = ["South Forge AI"]
edition = "2021"
default-run = "conduit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["desktop"]
desktop = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-process",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-notification",
    "dep:tauri-plugin-autostart",
    "dep:tauri-plugin-deep-link",
    "dep:tauri-plugin-single-instance",
]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "conduit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-notification = { version = "2", optional = true }
tauri-plugin-autostart = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json5 = "0.4"
serde_yaml = "0.9"
toml = "0.8"
dirs = "5"
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
subtle = "2.6"
base64 = "0.22"
regex = "1"
getrandom = "0.2"
# OS advisory file locking (flock / LockFileEx) for the cross-process registry write
# lock, so the app, the gateway binary, and the team-sync worker can't revert each
# other's registry.json edits. Auto-released by the OS if a holder crashes.
fs2 = "0.4"
chacha20poly1305 = "0.10"
urlencoding = "2"
# file:// URI -> path decoding for the ${ROOT} cwd token (issue #239); already in
# the tree transitively, promoted to a direct dep for url::Url::to_file_path.
url = "2"
# Minimal synchronous HTTP server for the gateway's native HTTP/OpenAPI mode
# (first-class Open WebUI and any OpenAPI tool client, no external bridge).
tiny_http = "0.12"
tauri-plugin-deep-link = { version = "2", optional = true }
tauri-plugin-single-instance = { version = "2", features = ["deep-link"], optional = true }

# OS keychain, with the native backend per platform.
[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
security-framework = "3"
security-framework-sys = "2"
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
